--- a/challenge2/templates/django_registration/registration_complete.html
+++ b/challenge2/templates/django_registration/registration_complete.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container mt-5">
       <p>You have successfully registered!</p>
-      <p><a href="{% url 'home' %}">Go to the dashboard</a></p>
+      <p><a href="{% url 'login' %}">Go to login</a></p>
     </div>
   </body>
 </html>
