--- a/challenge2/templates/cancelled.html
+++ b/challenge2/templates/cancelled.html
@@ -1,28 +1,20 @@
 {% extends 'base.html' %}
 {% block content %}
-
-<!-- Header-->
 <header class="bg-primary bg-gradient text-white">
     <div class="container px-4 text-center" style="height: 30%">
         <h1 class="fw-bolder">Welcome to Aben Premium</h1>
     </div>
 </header>
-
 <section id="about">
     <div class="container px-4">
         <div class="row gx-4 justify-content-center">
             <div class="col-lg-8">
                 <p class="lead">
-                    Hello, welcome.
-                    This is a premuim service only, kindly subscribe to access for only $49.99
+                    We hate to see you go!
                 </p>
-                <p>Subscribe today and get 7 days free trial</p>
-                <form action="/" method="POST">
-                    <input type="submit" id="checkout-button" value="Start free trial">
-                </form>
+                <p><a href="{% url 'home' %}">Go back</a></p>
             </div>
         </div>
     </div>
 </section>
-
 {% endblock content%}
