--- a/challenge2/templates/home.html
+++ b/challenge2/templates/home.html
@@ -1,28 +1,35 @@
 {% extends 'base.html' %}
 {% block content %}
-
-<section>
-    <div class="product">
-        <div class="container px-4">
-            <div class="row gx-4 justify-content-center">
-                <div class="col-lg-8">
-                    {% if subscription.status == "active" or subscription.status == "trialing" %}
-                    <h4>Your subscription:</h4>
-                    <div class="card" style="width: 18rem;">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ product.name }}</h5>
-                            <p>status: {{ subscription.status }}</p>
-                            {% if subscription.status == "trialing" %}
-                            <p>Your trialer ends on {{ trial_ends }}</p>
-                            {% elif subscription.status == "active" %}
-                            <p>Your subscription ends on {{subscription_ends}} </p>
-                            {% endif %}
+<header class="bg-primary bg-gradient text-white">
+    <div class="container px-4 text-center" style="height: 30%">
+        <h1 class="fw-bolder">Welcome to Aben Premium</h1>
+    </div>
+</header>
+<section id="about">
+    <div class="container px-4">
+        <div class="row gx-4 justify-content-center">
+            <div class="col-lg-8">
+                <p class="lead"> Yay !!!!, you are in.</p>
+                <h5>Your subscription:</h5>
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ product.name }}</h5>
+                        <p>status: {{ subscription.status }}</p>
+                        {% if subscription.status == "trialing" %}
+                        <p>Your trial ends on {{ trial_ends }}</p>
+                        {% elif subscription.status == "active" %}
+                        <p>Your subscription ends on {{subscription_ends}} </p>
+                        {% endif %}
+                        {% if subscription_status == "scheduled_to_cancel" %}
+                        <p>You cancelled subscription</p>
+                        <a href="">Reactivate subscription</a>
+                            {% else %}
                             <a href="{% url 'cancel_sub'%}">Cancel subscription</a>
-                        </div>
+                            {% endif %}
                     </div>
                 </div>
             </div>
         </div>
-        {% endif %}
+    </div>
 </section>
 {% endblock content%}
