--- a/challenge2/templates/success.html
+++ b/challenge2/templates/success.html
@@ -1,7 +1,20 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="container mt-5">
-    <p>You have can now successfully access our service!</p>
-    <p><a href="{% url 'login' %}">Proceed to login</a></p>
-</div>
+<header class="bg-primary bg-gradient text-white">
+    <div class="container px-4 text-center" style="height: 30%">
+        <h1 class="fw-bolder">Welcome to Aben Premium</h1>
+    </div>
+</header>
+<section id="about">
+    <div class="container px-4">
+        <div class="row gx-4 justify-content-center">
+            <div class="col-lg-8">
+                <p class="lead">
+                    You can now successfully access our service!
+                </p>
+                <p><a href="{% url 'login' %}">Proceed to login</a></p>
+            </div>
+        </div>
+    </div>
+</section>
 {% endblock content%}
